Fix for windowless plugins not painting in the right place, bug 118721 patch by mailto:dbrittain@superscape.com r=peterl sr=roc+moz a=asa